--- a/src/html/libs/menu.html
+++ b/src/html/libs/menu.html
@@ -12,7 +12,7 @@
             </ul>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">О нас</a>
+            <a href="/ui-kit/" class="nav-link">ui-kit</a>
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link">Контакты</a>
